2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs.el (debbugs-emacs): New function and modes for listing
	the Emacs bugs, reading them and updating them.

2011-06-12  Evgeny M. Zubok <zoubok@mail.ru>

	* debbugs.el (top): Pacify byte compiler.
	(debbugs): New custom group.
	(debbugs-servers): New defcustom.
	(debbugs-port): Allow user defined ports.
	(debbugs-get-mbox): New defun.

2011-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-get-bugs): Remove syntactical error.

2011-03-07  Michael Albinus  <michael.albinus@gmx.de>

	* Debbugs.wsdl:
	* README:
	* debbugs-pkg.el:
	* debbugs.el: Initial import.

;; Local Variables:
;; coding: utf-8
;; add-log-time-zone-rule: t
;; End:

    Copyright (C) 2011 Free Software Foundation, Inc.

  This file is part of GNU Emacs.

  GNU Emacs is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  GNU Emacs is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.